updated colors and fix contrast issue in gnome panel dropdown)

--- a/.themes/Sierra-dark-solid/gnome-shell/gnome-shell.css
+++ b/.themes/Sierra-dark-solid/gnome-shell/gnome-shell.css
@@ -726,6 +726,7 @@ StScrollBar StButton#hhandle:active {
 .popup-menu {
   min-width: 12em;
   background-color: transparent;
+  color: rgba(255, 255, 255, 0.50);
 }
 
 .popup-menu .popup-menu-arrow {
@@ -734,10 +735,11 @@ StScrollBar StButton#hhandle:active {
 }
 
 .popup-menu .popup-sub-menu {
-  background-color: rgba(100, 100, 100, 0.35);
+  background-color: transparent;
   border-radius: 0 0 5px 5px;
   border: none;
   box-shadow: none;
+  color: rgba(255, 255, 255, 0.50);
 }
 
 .popup-menu .popup-menu-content {
